--- a/views/about.ejs
+++ b/views/about.ejs
@@ -78,30 +78,40 @@
       <div class="ceo">
         <img src="images/ceo-1.jpg" alt="CEO 1">
         <p>Founder & CEO</p>
+        <p>Donald Barkley</p>
+
       </div>
       
 
       <div class="ceo">
         <img src="images/about-image8.jpg" alt="CEO 4">
         <p>Customer Relations</p>
+        <p>Nicole Anderson</p>
+
       </div>
       
         <!-- CEO 5 -->
         <div class="ceo">
             <img src="images/about-image6.jpg" alt="CEO 5">
             <p>Operations Head</p>
+            <p>Simeone Imani</p>
+
           </div>
           
       <!-- CEO 2 -->
       <div class="ceo">
         <img src="images/ceo-2.jpg" alt="CEO 2">
         <p>CTO</p>
+        <p>Amir Yousef</p>
+
       </div>
       
       <!-- CEO 3 -->
       <div class="ceo">
         <img src="images/about-image5.jpg" alt="CEO 3">
         <p>Delivery Manager</p>
+        <p>Katherine Rush</p>
+
       </div>
       
       <!-- CEO 4 -->
@@ -111,6 +121,8 @@
       <div class="ceo">
         <img src="images/ceo-3.jpg" alt="CEO 6">
         <p>Public Relations Officer</p>
+        <p>Angelina Pataka</p>
+
       </div>
     </div>
   </div>
