--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -152,7 +152,7 @@
       text-decoration: underline;
     }
     /* Media Query for a range of screen sizes */
-@media screen and (min-width: 779px) and (max-width: 1286px) {
+@media screen and (min-width: 816px) and (max-width: 1286px) {
   /* Add your styles here */
   .logo-text2 {
     position: absolute;
@@ -168,7 +168,8 @@
 }
 }
 
-      @media screen and (max-width: 779px) {
+
+      @media screen and (max-width: 816px) {
   .footer-section {
     flex-direction: column; /* Stack footer columns vertically */
     align-items: center; /* Center align footer content */
@@ -185,7 +186,7 @@
 
   .footer {
     padding-top: 40px; /* Reduce top padding for footer */
-    height: 130vh; /* Set smaller height for footer */
+    height: 140vh; /* Set smaller height for footer */
     background-color: #71767e; /* Set background color */
   }
 
@@ -226,32 +227,32 @@
       <div class="footer-column">
         <h3>QUICK LINKS</h3>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Track Us</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/services">Services</a></li>
+          <li><a href="/trackgoods">Track Goods</a></li>
+          <li><a href="/contactus">Contact Us</a></li>
         </ul>
       </div>
       <div class="footer-column">
         <h3>Company Services</h3>
         <ul>
-          <li><a href="#">Ground Shipping</a></li>
-          <li><a href="#">International Air Freight</a></li>
-          <li><a href="#">Seaport Way</a></li>
-          <li><a href="#">Warehousing</a></li>
+          <li><a href="/services">Ground Shipping</a></li>
+          <li><a href="/services">International Air Freight</a></li>
+          <li><a href="/services">Seaport Way</a></li>
+          <li><a href="/services">Warehousing</a></li>
         </ul>
       </div>
       <div class="footer-column">
         <h3>Contact Company</h3>
         <p>21 E. Valley Stream Blvd.<br>Valley Stream, NY 11580, USA</p>
-        <p>Phone: +1 (409) 908-4363</p>
-        <p>Email: info@oceanwavetransport.net</p>
+        <p>Phone: +1 (735) 765-9941</p>
+        <p>Email: oceanwavetransport@gmail.com</p>
         <p>Opening Time: 10am - 5pm (Mon - Fri)</p>
       </div>
     </div>
     <div class="footer-copyright">
-      Copyright © 2006 - 2024 Oceanwave Courier. All rights reserved.
+      Copyright © 2006 - 2024 Oceanwave Transport. All rights reserved.
     </div>
   </footer>
 </body>
