--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -137,8 +137,9 @@ color: rgb(229, 187, 136);        }
                 </div>
             </div>
             <div class="contact-info">
-                <p>Phone: +123456789</p>
-                <p>Email: info@yourshippingcompany.com</p>
+                <p>Phone: +1 (735) 765-9941</p>
+                <p>Email: oceanwavetransport@gmail.com
+                </p>
             </div>
         </div>
     </header>
