--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -32,7 +32,7 @@
         <h3>Contact Information</h3>
         <p>Address: 123 Oceanwave Street, City, Country</p>
         <p>Phone: +123 456 7890</p>
-        <p>Email: info@oceanwavetransport.com</p>
+        <p>Email: oceanwavetransport@gmail.com</p>
     </div>
       <form action="/home" method="post">
         <input type="text" name="name" placeholder="Your Name" required />
