--- a/views/about.ejs
+++ b/views/about.ejs
@@ -73,6 +73,7 @@
   
 <!-- Fifth Section -->
 <div class="fifth-section">
+  <h3 class="teamlead">Team Leaders</h3>
     <div class="team-container">
       <!-- CEO 1 -->
       <div class="ceo">
