--- a/public/about.css
+++ b/public/about.css
@@ -13,6 +13,9 @@
 
 }
 
+.teamlead {
+  text-align: center;
+}
 header, footer {
     margin: 0; /* Remove margin for header and footer */
     padding: 0; /* Remove padding for header and footer */
